--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -6,6 +6,12 @@
   align-items: center;
 }
 
+@media (max-width:720px) {
+  .nav{
+    display: none;
+  }
+}
+
 .nav ul {
   display: flex;
   justify-content: center;
