--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -6,7 +6,7 @@
   align-items: center;
 }
 
-.nav ul {
+.nav .navRoutes ul {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,7 +15,7 @@
 }
 
 @media (max-width: 720px) {
-  .nav ul {
+  .nav .navRoutes ul {
     display: none;
   }
   .nav {
@@ -23,13 +23,19 @@
   }
 }
 
-.nav ul li {
+.nav .navRoutes ul li {
   text-transform: uppercase;
+}
+
+@media (min-width: 721px) {
+  .sideBarForMobile {
+    display: none;
+  }
 }
 
 @media (max-width: 720px) {
   .LOGO {
-    padding-left: 20px;
+    padding-left: 75px;
   }
 }
 
@@ -88,6 +94,7 @@
   border-radius: 10%;
   background: rgb(0, 255, 255);
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 9;
 }
 .dropdown_content button {
   padding: 0.2rem 0.3rem;
