--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -42,6 +42,7 @@ border-radius: 10px;
 @media (max-width:825px) {
     .itemsInnerDiv{
         /* height: 330px; */
+        width: 55%;
     }
 }
 @media (max-width:430px) {
