--- a/src/components/chat/chat.module.css
+++ b/src/components/chat/chat.module.css
@@ -1,4 +1,14 @@
-.chatMain{
+.mainParent{
+    padding-bottom: 4px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+.first_childDiv{
+    width: 90vw;
+}
+.second_childDiv{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,13 +29,16 @@
 
 
 @media (max-width:700px) {
+    .first_childDiv{
+        width: 100vw;
+    }
     .chatMainChatbox{
-        width: 95vw;
+        width: 100vw;
     min-width: 300px;
     /* display: none; */
     }
     .chatAside{
-        width: 90vw;
+        width: 100vw;
         min-width: 300px;
     }
 }
